# muckrake

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  response.html
.github/: copilot-instructions.md
.github/prompts/: followthemoney.prompt.md
.github/workflows/: publish.yml
datasets/: AGENTS.md  README.md
docker/postgres-init/: 01-create-published-db.sh
docs/deploy/: Caddyfile  README.md  cloud-init-hetzner.yaml  hetzner-firewall-rules.json
docs/other_libs/: ftmqapi.md  yente.md  zavod-db.md  zavod-ui.md  zavod-vs-investigraph.md  zavod.md
openlobbying/: AGENTS.md  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
openlobbying/src/: app.d.ts  app.html  hooks.server.ts  lucide.d.ts
openlobbying/static/: robots.txt
ops/: README.md  deploy_to_vps.sh
scripts/: check_meetings_missing_dates.py  deploy_to_vps.sh  publish_sqlite_to_vps.sh
tests/: conftest.py  test_artifacts.py  test_cli_entities.py  test_dates.py  test_entity_write.py  test_fetch.py  test_ftm_custom_model.py  test_gov_transparency_crawler.py  test_gov_transparency_entities.py  test_gov_transparency_extract.py  test_gov_transparency_fingerprint.py  test_gov_transparency_normalise.py  test_gov_transparency_schema.py  test_govuk_meetings_common.py  test_govuk_meetings_crawler.py  test_govuk_meetings_emitter.py  test_govuk_meetings_validation.py  test_id.py  test_load.py  test_ner_apply.py  test_release.py  test_sqlite_defaults.py  test_sqlite_storage.py
(+469 files in other folders)
