[project]
name = "muckrake"
version = "0.1.0"
description = "A framework for creating and storing FollowTheMoney entities, used by OpenLobbying."
readme = "README.md"
authors = [
    { name = "Nicu Calcea", email = "mail@nicu.md" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.3.1",
    "datapatch>=1.2.4",
    "fastapi>=0.127.0",
    "followthemoney>=4.4.0",
    "org-id>=0.1.0",
    "lxml>=6.0.2",
    "nomenklatura>=4.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic-ai-slim[google,openrouter]>=1.0.0",
    "psycopg[binary]>=3.2.12",
    "plyvel>=1.5.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
    "logfire[httpx,sqlalchemy]>=4.24.0",
]

[project.scripts]
muckrake = "muckrake.cli:cli"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
